# train_scraper

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
scraper/: pyproject.toml
scraper_app/: Makefile  pyproject.toml
