[tool.poetry]
name = "train_scraper"
version = "0.1.0"
description = ""
authors = ["Matthieu Olenga <matt.olenga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.10.1"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
