[tool.poetry]
name = "train_scraper"
version = "0.1.0"
description = ""
authors = ["Matthieu Olenga <matt.olenga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
